# open_mafia_engine

./: .gitignore  .readthedocs.yaml  Create API  README.md  README.rst  env.yml  mkdocs.yml  mypy.ini  playground.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-testing.yml
docs/: Makefile  about.md  concepts.md  example_prefab.yml  index.md  make.bat  requirements.txt
docs/development/: installing_dev.md  writing_docs.md
docs/examples/: index.md
docs/getting_started/: quickstart.md
docs/reference/: builders.md  built_in.md  builtin.md  commands.md  core.md  errors.md  index.md  todo_ref.md  util.md
docs/source/: conf.py  index.rst  readme.rst
docs/user_guide/: abilities.md  base_objects.md  concepts.md  event_system.md  outcomes.md  prefabs.md  state.md  utilities.md
mafia/: __init__.py
mafia/api/: bad_base.py  base.py  main.py  models.py  py.py  rest.py  vanilla.py
mafia/cli/: __init__.py  app.py  app2.py
mafia/core/: __init__.py  ability.py  action.py  errors.py  event.py
mafia/mechanics/: __init__.py  kill.py  outcome.py  prevent.py  restriction.py  vote.py
mafia/playground/: test_endpoint.py  test_rest.py  test_stuff.py
mafia/premade/: __init__.py
mafia/state/: access.py  actor.py  game.py  role.py  status.py
mafia/util/: __init__.py
mafia_old/core/: action.py  event.py
open_mafia_engine/: api.py  core.py  errors.py  examples.py  old_core.py  prefab.py  version.py
open_mafia_engine/api/: __init__.py
open_mafia_engine/builders/: all.py  for_testing.py
open_mafia_engine/built_in/: ability.py  ability.yml  action.py  actions.py  all.py  aux_obj.py  auxiliary.py  constraint.py  constraint.yml  constraints.py  debug.py  event.py  information.py  killing.py  kills.py  load.py  lynch.py  lynch_tally.py  notify.py  outcome.py  phase.yml  phases.py  protect.py  redirect.py  roleblock.py  shorthands.py  startup.py  triggers.py  voting.py  wincon.yml
open_mafia_engine/commands/: all.py  cli_lexer.py  lobby.py  parser.py  pygment_lexer.py  raw.py  runner.py
open_mafia_engine/converters/: core.py
open_mafia_engine/core/: ability.py  action.py  all.py  api.py  auxiliary.py  builder.py  constraint.py  converters.py  ender.py  engine.py  enums.py  event_system.py  game.py  game_object.py  naming.py  outcome.py  phase.py  phase_cycle.py  prefab.py  role.py  state.py  wincon.py
requirements/: development.txt
sandbox/: test_action_raw.py  test_event_sys.py  test_external_control.py  test_vanilla.py
(+47 files in other folders)
