[tool.poetry]
name = "open-mafia-engine"
version = "0.1.0"
description = "Open Mafia Engine - a framework for mafia/werewolf games."
authors = ["Open Mafia Team <openmafiateam@email.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
