[tool.poetry]
name = "open-mafia-engine"
version = "0.5.0-alpha.4"
readme = "README.md"
description = "Open Mafia Engine - a framework for mafia/werewolf games."
authors = ["Open Mafia Team <openmafiateam@gmail.com>"]
license = "Apache-2.0"
homepage = "https://open-mafia-engine.readthedocs.io/en/latest/"
documentation = "https://open-mafia-engine.readthedocs.io/en/latest/"
repository = "https://github.com/open-mafia/open_mafia_engine"
keywords = ["mafia", "werewolf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Games/Entertainment :: Board Games",
]
include = ["open_mafia_engine/prefabs/*"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
pydantic-yaml = "^0.2.3"
sortedcontainers = "^2.3.0"
makefun = "^1.11.3"
fuzzywuzzy = "^0.18.0"
cloudpickle = "^1.6.0"
mkdocs = { version = "^1.1.2", optional = true }
beautifulsoup4 = { version = "^4.9.3", optional = true }
requests = { version = "^2.25.1", optional = true }
"ruamel.yaml" = { version = "^0.17.4", optional = true }
flake8 = { version = "^3.9.2", optional = true }
mypy = { version = "^0.800", optional = true }
pytest = { version = "^6.2.4", optional = true }
pygments = { version = "~2.9.0", optional = true }

[tool.poetry.extras]
bay12 = ["beautifulsoup4", "requests"]
docs = ["mkdocs"]
ruamel = ["ruamel.yaml"]
dev = ["flake8", "mypy", "pytest"]
test = ["pytest"]
pygments = ["pygments"]

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.2"
mkdocs = "^1.1.2"
isort = "^5.7.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
